crates/tlang_parser/tests/snapshots/parser_modules__private_mod_multiple.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"mod internal, helpers;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: ModDeclaration(ModDeclaration(
        visibility: Private,
        names: [
          Ident(
            name: "internal",
            span: Span(
              start: 4,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
          Ident(
            name: "helpers",
            span: Span(
              start: 14,
              end: 21,
              start_lc: LineColumn(
                line: 0,
                column: 14,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 21,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 22,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 22,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 22,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 22,
    ),
  ),
)
