crates/tlang_parser/tests/snapshots/parser_modules__private_mod_single.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"mod internal;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: ModDeclaration(ModDeclaration(
        visibility: Private,
        names: [
          Ident(
            name: "internal",
            span: Span(
              start: 4,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 13,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 13,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 13,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 13,
    ),
  ),
)
