crates/tlang_parser/tests/snapshots/parser_modules__pub_mod_single.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"pub mod parse;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: ModDeclaration(ModDeclaration(
        visibility: Public,
        names: [
          Ident(
            name: "parse",
            span: Span(
              start: 8,
              end: 13,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 13,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 14,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 14,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 14,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 14,
    ),
  ),
)
