crates/tlang_parser/tests/snapshots/parser_modules__pub_use_combined_with_mod.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (indoc! {\"\n        pub mod math;\n        pub use math::add;\n    \"})"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: ModDeclaration(ModDeclaration(
        visibility: Public,
        names: [
          Ident(
            name: "math",
            span: Span(
              start: 8,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 13,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 13,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
    Stmt(
      id: 4,
      kind: UseDeclaration(UseDeclaration(
        visibility: Public,
        path: [
          Ident(
            name: "math",
            span: Span(
              start: 22,
              end: 26,
              start_lc: LineColumn(
                line: 1,
                column: 9,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 13,
              ),
            ),
          ),
        ],
        items: [
          UseItem(
            name: Ident(
              name: "add",
              span: Span(
                start: 28,
                end: 31,
                start_lc: LineColumn(
                  line: 1,
                  column: 15,
                ),
                end_lc: LineColumn(
                  line: 1,
                  column: 18,
                ),
              ),
            ),
            alias: None,
            span: Span(
              start: 28,
              end: 31,
              start_lc: LineColumn(
                line: 1,
                column: 15,
              ),
              end_lc: LineColumn(
                line: 1,
                column: 18,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 14,
        end: 32,
        start_lc: LineColumn(
          line: 1,
          column: 1,
        ),
        end_lc: LineColumn(
          line: 1,
          column: 19,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 32,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 1,
      column: 19,
    ),
  ),
)
