crates/tlang_parser/tests/snapshots/parser_modules__pub_use_deep_path.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"pub use a::b::c::add;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: UseDeclaration(UseDeclaration(
        visibility: Public,
        path: [
          Ident(
            name: "a",
            span: Span(
              start: 8,
              end: 9,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 9,
              ),
            ),
          ),
          Ident(
            name: "b",
            span: Span(
              start: 11,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 11,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
          Ident(
            name: "c",
            span: Span(
              start: 14,
              end: 15,
              start_lc: LineColumn(
                line: 0,
                column: 14,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 15,
              ),
            ),
          ),
        ],
        items: [
          UseItem(
            name: Ident(
              name: "add",
              span: Span(
                start: 17,
                end: 20,
                start_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 20,
                ),
              ),
            ),
            alias: None,
            span: Span(
              start: 17,
              end: 20,
              start_lc: LineColumn(
                line: 0,
                column: 17,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 20,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 21,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 21,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 21,
    ),
  ),
)
