crates/tlang_parser/tests/snapshots/parser_modules__pub_use_single_import.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"pub use math::add;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: UseDeclaration(UseDeclaration(
        visibility: Public,
        path: [
          Ident(
            name: "math",
            span: Span(
              start: 8,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
        ],
        items: [
          UseItem(
            name: Ident(
              name: "add",
              span: Span(
                start: 14,
                end: 17,
                start_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
              ),
            ),
            alias: None,
            span: Span(
              start: 14,
              end: 17,
              start_lc: LineColumn(
                line: 0,
                column: 14,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 17,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 18,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 18,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 18,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 18,
    ),
  ),
)
