crates/tlang_parser/tests/snapshots/parser_modules__pub_use_single_import_with_alias.snap
---
source: crates/tlang_parser/tests/parser_modules.rs
expression: "parse! (\"pub use math::add as sum;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: UseDeclaration(UseDeclaration(
        visibility: Public,
        path: [
          Ident(
            name: "math",
            span: Span(
              start: 8,
              end: 12,
              start_lc: LineColumn(
                line: 0,
                column: 8,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 12,
              ),
            ),
          ),
        ],
        items: [
          UseItem(
            name: Ident(
              name: "add",
              span: Span(
                start: 14,
                end: 17,
                start_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 17,
                ),
              ),
            ),
            alias: Some(Ident(
              name: "sum",
              span: Span(
                start: 21,
                end: 24,
                start_lc: LineColumn(
                  line: 0,
                  column: 21,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 24,
                ),
              ),
            )),
            span: Span(
              start: 14,
              end: 24,
              start_lc: LineColumn(
                line: 0,
                column: 14,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 24,
              ),
            ),
          ),
        ],
        span: Span(
          start: 0,
          end: 0,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 0,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 25,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 25,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 25,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 25,
    ),
  ),
)
